apps/services/radar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: radar.batsworks.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-external
                port:
                  number: 9280
  tls:
    - hosts:
        - radar.batsworks.com.br
      secretName: radar-tls-secret
